# circuit-tracing-ot

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: mcqa_clt_426k_probe_2k_layers17_25.yaml  mcqa_clt_probe.yaml  mcqa_examples.yaml  mcqa_neuronpedia_clt_probe.yaml  tracing.yaml
notebooks/: 01_mcqa_circuit_tracing.ipynb
scripts/: export_graph_files.py  export_plot_feature_graph.py  export_probe_feature_visualizations.py  inspect_clt_payload.py  intervene_mcqa.py  plot_mcqa_clt.py  plot_mcqa_plt.py  plot_mcqa_pruned_last_token_clt.py  print_circuit_tracer_feature_examples.py  probe_mcqa_clt_concepts.py  probe_mcqa_neuronpedia_clt_concepts.py  screen_mcqa_clt_features.py  serve_graphs.py  trace_representative_mcqa.py
src/circuit_tracing_ot/: __init__.py  clt_features.py  config.py  interventions.py  logging.py  mcqa_prompts.py  model.py  server.py  trace.py
src/circuit_tracing_ot/mcqa_plot/: __init__.py  checking.py  clt_backend.py  data.py  decoded_interventions.py  metrics.py  ot.py  pruned_graph_sites.py
tests/: test_screen_mcqa_clt_features.py
