[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "circuit-tracing-ot"
version = "0.1.0"
description = "MCQA attribution graph experiments with Gemma-2-2B CLTs and circuit-tracer."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "circuit-tracer @ git+https://github.com/safety-research/circuit-tracer.git",
    "torch",
    "transformers",
    "transformer_lens",
    "accelerate",
    "datasets",
    "huggingface-hub",
    "PyYAML",
    "pandas",
]

[project.optional-dependencies]
viz = [
    "circuit-tracer[viz] @ git+https://github.com/safety-research/circuit-tracer.git",
    "ipykernel",
    "ipywidgets",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
